New user service

--- a/WEB-Angular-Frontend/src/app/login/login.component.html
+++ b/WEB-Angular-Frontend/src/app/login/login.component.html
@@ -1,2 +1,8 @@
 <p>login works!</p>
 {{superman}}
+
+<p>Yo ju</p>
+
+<button (click)="login()">Login</button>
+
+<button (click)="goBack()">Cancel</button>
