Nothing is still working

--- a/WEB-Angular-Frontend/src/app/login/login.component.html
+++ b/WEB-Angular-Frontend/src/app/login/login.component.html
@@ -1,8 +1,5 @@
-<p>login works!</p>
-{{superman}}
-
-<p>Yo ju</p>
-
-<button (click)="login()">Login</button>
-
-<button (click)="goBack()">Cancel</button>
+<h2>login works!</h2>
+<div>
+    <button (click)="login()">Login</button>
+    <button (click)="goBack()">Cancel</button>
+</div>
