workout interface made and getworkoutlist made

--- a/WEB-Angular-Frontend/src/app/all-workouts/all-workouts.component.html
+++ b/WEB-Angular-Frontend/src/app/all-workouts/all-workouts.component.html
@@ -1,10 +1,4 @@
-<<<<<<< HEAD
 <h1>Workout List</h1>
 <li *ngFor="let workout of workoutList">
-    
+    <p>{{workout.name}}</p>
 </li>
-=======
-<p>all-workouts works!</p>
-
-<app-login></app-login>
->>>>>>> ceb027e9e3a2fe034addc82b7d2432d800b83e36
