added a button in the workoutlist in frontend

--- a/WEB-Angular-Frontend/src/app/all-workouts/all-workouts.component.html
+++ b/WEB-Angular-Frontend/src/app/all-workouts/all-workouts.component.html
@@ -2,5 +2,11 @@
 <ul class="workouts">
     <li *ngFor="let workout of workoutList">
         <p>{{workout.name}}</p>
+        <div *ngIf="loggedin==true">
+            <button>logget ind</button>
+        </div>
+        <div *ngIf="loggedin==false">
+            <button>ikke logget ind</button>
+        </div>
     </li>
 </ul>
