Authentication is coming!

--- a/WEB-Angular-Frontend/src/app/app.component.html
+++ b/WEB-Angular-Frontend/src/app/app.component.html
@@ -3,7 +3,5 @@
 <router-outlet></router-outlet>
 <app-all-workouts></app-all-workouts>
 
-<button>
-    <a routerLink="/login">Login</a>
-</button>
+<button routerLink='/login'>Login</button>
 <!--<app-login></app-login>-->
