made a lot of get work

--- a/WEB-Angular-Frontend/src/app/app.component.html
+++ b/WEB-Angular-Frontend/src/app/app.component.html
@@ -1,7 +1,7 @@
 <h1>{{title}}</h1>
 
 <router-outlet></router-outlet>
-<app-all-workouts></app-all-workouts>
+<!--<app-all-workouts></app-all-workouts>-->
 
 <button routerLink='/login'>Login</button>
 <!--<app-login></app-login>-->
