--- a/WEB-Angular-Frontend/src/app/Components/all-workouts/all-workouts.component.html
+++ b/WEB-Angular-Frontend/src/app/Components/all-workouts/all-workouts.component.html
@@ -2,6 +2,8 @@
 <h1>Workout List</h1>
 </div>
 
+<button routerLink='/login'>Login</button>
+
 <ul class="workouts">
     <li *ngFor="let workout of workoutList">
         {{workout.name}}
