--- a/WEB-Angular-Frontend/src/app/Components/login/login.component.html
+++ b/WEB-Angular-Frontend/src/app/Components/login/login.component.html
@@ -1,4 +1,26 @@
-<h2>login works!</h2>
+<h2>Login</h2>
+<form [formGroup]="loginForm" (ngSubmit)="login()">
+    <div class="form-group">
+        <label for="username">Username</label>
+        <input type="text" formControlName="username" class="form-control" [ngClass]="{'is-invalid': submitted && f.username.errors}" />
+        
+    </div>
+    <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" formControlName="password" class="form-control" [ngClass]="{'is-invalid': submitted && f.password.errors}" />
+        
+    </div>
+    <div class="form-group">
+        <button class="btn btn-primary">
+            
+            Login
+        </button>
+    </div>
+</form>
+
+<button (click)="logout">Logout</button>
+
+<!--
 <div>
     <label>
         Username: <input #userName />
@@ -8,7 +30,7 @@
 </div>
 <button (click)="goBack()">Cancel</button>
 
-<!--
+
 <ul class="users">
     <li *ngFor="let user of users">
         <p>{{user.username}} and {{user.password}}</p>
