Codecleanup in most files

--- a/WEB-Angular-Frontend/src/app/app.component.html
+++ b/WEB-Angular-Frontend/src/app/app.component.html
@@ -1,5 +1,7 @@
 <h1>{{title}}</h1>
 
+<button routerLink='/login'>Login</button>
+
 <router-outlet></router-outlet>
 <!--<app-all-workouts></app-all-workouts>-->
 <!--<app-login></app-login>-->
