--- a/WEB-Angular-Frontend/src/app/app.component.html
+++ b/WEB-Angular-Frontend/src/app/app.component.html
@@ -1,6 +1,7 @@
 <h1>{{title}}</h1>
 
 <button routerLink='/login'>Login</button>
+<!--Logout-->
 
 <router-outlet></router-outlet>
 <!--<app-all-workouts></app-all-workouts>-->
