--- a/WEB-Angular-Frontend/src/app/Components/add-exercise/add-exercise.component.html
+++ b/WEB-Angular-Frontend/src/app/Components/add-exercise/add-exercise.component.html
@@ -10,8 +10,8 @@
         
         
     </table>
-    <!--button (click)="cancel()">Cancel</button-->
-    <div class="form-group">
+    <button (click)="cancel()">Cancel</button>
+    
         <button class="btn btn-primary">Add Exercise to Workout</button>
-    </div>
+    
 </form>
