--- a/WEB-Angular-Frontend/src/app/app.component.html
+++ b/WEB-Angular-Frontend/src/app/app.component.html
@@ -1,6 +1,6 @@
 <h1>{{title}}</h1>
 
-<button routerLink='/login'>Login</button>
+<app-logbar></app-logbar>
 <!--Logout-->
 
 <router-outlet></router-outlet>
