--- a/WEB-Angular-Frontend/src/app/Components/create-user/create-user.component.html
+++ b/WEB-Angular-Frontend/src/app/Components/create-user/create-user.component.html
@@ -4,29 +4,26 @@
     <div class="form-group">
         <mat-form-field class="form_field" appearance="fill">
             <mat-label for="username">Username: </mat-label>
-            <input matInput type="text" placeholder="username" formControlName="username"/>
+            <input matInput type="text" formControlName="username"/>
             <mat-error *ngIf="f.username.errors.required">username is required></mat-error>
         </mat-form-field>
-        
-        <!--input type="text" formControlName="username" class="form-control" [ngClass]="{'is-invalid': submitted && f.username.errors}"/>
-        <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
-            <div *ngIf="f.username.errors.required">username is required</div>
-            <div *ngIf="f.username.errors.maxlength">username must be under 20 characters</div>
-        </div-->
     </div>
+
     <div class="form-group">
-        <label for="password">Password: </label>
-        <input type="password" formControlName="password" class="form-control" [ngClass]="{'is-invalid': submitted && f.password.errors}"/>
-        <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-            <div *ngIf="f.password.errors.required">password is required</div>
-            <div *ngIf="f.password.errors.minlength">password must be at least 5 characters long</div>
-        </div>
+        <mat-form-field class="form_field" appearance="fill">
+            <mat-label for="password">Password</mat-label>
+            <input matInput type="text"  formControlName="password">
+            <mat-error *ngIf="f.password.errors.required">Password required</mat-error>
+        </mat-form-field>
     </div>
+
+    <button mat-raised-button (click)="goBack()">Cancel</button>
+    
     <div class="form-group">
-        <button class="btn btn-primary">
+        <button mat-raised-button class="btn btn-primary">
             Create
         </button>
     </div>
 </form>
 
-<button (click)="goBack()">Cancel</button>
+
