--- a/WEB-Angular-Frontend/src/app/Components/login/login.component.html
+++ b/WEB-Angular-Frontend/src/app/Components/login/login.component.html
@@ -1,25 +1,33 @@
 <h2>Login</h2>
-<form [formGroup]="loginForm" (ngSubmit)="login()">
+
+<form [formGroup]="loginForm" >
+    
+    <p>
+        <mat-form-field appearance="standard">
+            <input matInput formControlName="username" placeholder="Username" [ngClass]="{'is-invalid': submitted && f.username.errors}">
+        </mat-form-field>
+    </p>
+    
+    <p>
+        <mat-form-field appearance="standard">
+            <input matInput formControlName="password" placeholder="Password" [ngClass]="{'is-invalid': submitted && f.password.errors}">
+        </mat-form-field>
+    </p>
+
     <div class="form-group">
-        <label for="username">Username: </label>
-        <input type="text" formControlName="username" class="form-control" [ngClass]="{'is-invalid': submitted && f.username.errors}" />
-        
-    </div>
-    <div class="form-group">
-        <label for="password">Password: </label>
-        <input type="password" formControlName="password" class="form-control" [ngClass]="{'is-invalid': submitted && f.password.errors}" />
-        
-    </div>
-    <div class="form-group">
-        <button class="btn btn-primary">
+        <button mat-raised-button (click)="login()" class="btn btn-primary">
             Login
+        </button>
+        <button mat-raised-button (click)="goBack()">
+            Go back
         </button>
     </div>
 </form>
 
-<button (click)="logout()">Logout</button>
-<button (click)="goBack()">Go back</button>
+
 <div *ngIf="loggedIn==false">
-    <button (click)="createUser()">Create new user</button>
+    <button mat-raised-button (click)="createUser()">
+        Create new user
+    </button>
 </div>
 
