Change name of logbar btn - "login" -> "Login page"

--- a/WEB-Angular-Frontend/src/app/Components/logbar/logbar.component.html
+++ b/WEB-Angular-Frontend/src/app/Components/logbar/logbar.component.html
@@ -1,6 +1,6 @@
 
 <div *ngIf="loggedin==false">
-    <button mat-raised-button color="primary" routerLink='/login'>Login</button>
+    <button mat-raised-button color="primary" routerLink='/login'>Login page</button>
 </div>
 <div *ngIf="loggedin==true">
     <button mat-raised-button color="warn" (click)="logout()">Logout</button>
