made table nice

--- a/WEB-Angular-Frontend/src/app/Components/workout-details/workout-details.component.css
+++ b/WEB-Angular-Frontend/src/app/Components/workout-details/workout-details.component.css
@@ -1,9 +1,5 @@
-table, td, tr {
-    border-collapse: collapse;
-    border: 1px solid black;
-    padding: 5px;
-    margin: 0px;
-    border-spacing: 0px;
+table {
+    width: 100%;
 
 }
 
