--- a/WEB-Angular-Frontend/src/app/Components/workout-details/workout-details.component.html
+++ b/WEB-Angular-Frontend/src/app/Components/workout-details/workout-details.component.html
@@ -6,10 +6,25 @@
             
             <ng-container matColumnDef="name">
                 <th mat-header-cell *matHeaderCellDef>Name</th>
-                <td mat-cell *matCellDef="let element">{{element.name}}</td>
+                <td mat-cell *matCellDef="let exercise">{{exercise.name}}</td>
             </ng-container>
 
-            <tr mat-header-row class="header">
+            <ng-container matColumnDef="description">
+                <th mat-header-cell *matHeaderCellDef>Description</th>
+                <td mat-cell *matCellDef="let exercise">{{exercise.description}}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="numberofsets">
+                <th mat-header-cell *matHeaderCellDef>Number of sets</th>
+                <td mat-cell *matCellDef="let exercise">{{exercise.numbersets}}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="timerep">
+                <th mat-header-cell *matHeaderCellDef>Time/repetitions</th>
+                <td mat-cell *matCellDef="let exercise">{{exercise.timerep}}</td>
+            </ng-container>
+
+            <!--tr mat-header-row class="header">
                 <td mat-header-cell>Name</td>
                 <td mat-header-cell>Description</td>
                 <td mat-header-cell>Number of sets</td>
@@ -21,14 +36,16 @@
                 <td mat-header-cell>{{exercise.description}}</td>
                 <td mat-header-cell>{{exercise.timerep}}</td>
                 <td mat-header-cell>{{exercise.numbersets}}</td>
-            </tr>
+            </tr-->
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
 
-        <!--div *ngIf="loggedIn==true">
-            <button (click)="addActivity()">Add Activity</button>
-            <button (click)="addExercise()">Add Exercise</button>
-            <button (click)="goBack()">Return</button>
-        </div-->
+        <div *ngIf="loggedIn==true">
+            <button mat-raised-button (click)="addActivity()">Add Activity</button>
+            <button mat-raised-button (click)="addExercise()">Add Exercise</button>
+            <button mat-raised-button (click)="goBack()">Return</button>
+        </div>
     </ul>
 </div>
 <div>
