--- a/WEB-Angular-Frontend/src/app/Components/workout-details/workout-details.component.html
+++ b/WEB-Angular-Frontend/src/app/Components/workout-details/workout-details.component.html
@@ -24,19 +24,6 @@
                 <td mat-cell *matCellDef="let exercise">{{exercise.timerep}}</td>
             </ng-container>
 
-            <!--tr mat-header-row class="header">
-                <td mat-header-cell>Name</td>
-                <td mat-header-cell>Description</td>
-                <td mat-header-cell>Number of sets</td>
-                <td mat-header-cell>Time/Repetitions</td>
-            </tr>
-
-            <tr mat-header-row *ngFor="let exercise of workout.exercises">
-                <td mat-header-cell>{{exercise.name}}</td>
-                <td mat-header-cell>{{exercise.description}}</td>
-                <td mat-header-cell>{{exercise.timerep}}</td>
-                <td mat-header-cell>{{exercise.numbersets}}</td>
-            </tr-->
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
@@ -50,9 +37,9 @@
 </div>
 <div>
     <ul class="activities">
-        <li *ngFor="let activity of activitiesList">
-            {{activity.actDate}} {{activity.actDescription}}
-        </li>
+        <mat-list *ngFor="let activity of activitiesList">
+            <mat-icon matListIcon >short_text</mat-icon>
+            <mat-line role="listitem">{{activity.actDate}} {{activity.actDescription}}</mat-line>
+        </mat-list>
     </ul>
 </div>
-<!--div *ngIf="loggedIn==true"></div-->
