--- a/WEB-Angular-Frontend/src/app/Components/logbar/logbar.component.html
+++ b/WEB-Angular-Frontend/src/app/Components/logbar/logbar.component.html
@@ -1,7 +1,9 @@
 
-<div *ngIf="loggedin==false">
-    <button mat-raised-button color="primary" routerLink='/login'>Login page</button>
-</div>
-<div *ngIf="loggedin==true">
-    <button mat-raised-button color="warn" (click)="logout()">Logout</button>
+<div class="logbarcenter">
+    <div *ngIf="loggedin==false">
+        <button mat-raised-button color="primary" routerLink='/login'>Login page</button>
+    </div>
+    <div *ngIf="loggedin==true">
+        <button mat-raised-button color="warn" (click)="logout()">Logout</button>
+    </div>
 </div>
