--- a/WEB-Angular-Frontend/src/styles.css
+++ b/WEB-Angular-Frontend/src/styles.css
@@ -2,3 +2,9 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+.parent {height: 100px;}
+.left {background-color: rgb(112, 116, 116);}
+.center {background-color: rgb(87, 87, 84);}
+.right{background-color: blue;}
