--- a/WEB-Angular-Frontend/src/app/Components/all-workouts/all-workouts.component.css
+++ b/WEB-Angular-Frontend/src/app/Components/all-workouts/all-workouts.component.css
@@ -1,7 +1,7 @@
 
-.firstcolumn {background-color: yellow;}
+.firstcolumn {background-color: lightseagreen;}
 .secondcolumn {background-color: teal;}
-.thirdcolumn {background-color: thistle;}
+.thirdcolumn {background-color: lightseagreen;}
 
 .textcenter{
     text-align: center;
