--- a/WEB-Angular-Frontend/src/app/Components/workout-details/workout-details.component.css
+++ b/WEB-Angular-Frontend/src/app/Components/workout-details/workout-details.component.css
@@ -8,8 +8,17 @@ table {
     border-collapse: collapse;
 }
 
-
-
 button {
     margin: 10px;
 }
+
+.firstcolumn {
+    background-color: lightseagreen;
+    text-align: center;
+}
+.secondcolumn {
+    background-color: teal;
+    text-align: center;
+}
+.thirdcolumn {background-color: lightseagreen;}
+.fourthcolumn {background-color: teal;}
